<resources>
    <string name="app_name">Hidra HOTEL</string>
    <string name="title_activity_tl_cadastro_hospede">tl_cadastroHospede</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="title_activity_tl_menu">tl_Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menu</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_quartos">Quartos</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_mireserva">Reserva</string>

</resources>