<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_baseline_perm_identity_24"
            android:title="@string/menu_perfil" />

        <item
            android:id="@+id/nav_quartos"
            android:icon="@drawable/ic_baseline_sensor_door_24"
            android:title="@string/menu_quartos" />

        <item
            android:id="@+id/reservaFragment"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_mireserva" />

        <item
            android:id="@+id/sobreFragment"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_sobre" />



    </group>
</menu>