<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hotel.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.hotel.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_Perfil" />

    <fragment
        android:id="@+id/nav_quartos"
        android:name="com.example.hotel.ui.quartos.QuartosFragment"
        android:label="@string/menu_quartos"
        tools:layout="@layout/fragment_quartos" />
    <fragment
        android:id="@+id/reservaFragment"
        android:name="com.example.hotel.ui.reserva.ReservaFragment"
        android:label="@string/menu_mireserva"
        tools:layout="@layout/reserva_fragment" />
    <fragment
        android:id="@+id/sobreFragment"
        android:name="com.example.hotel.ui.sobre.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/sobre_fragment" />
</navigation>